Adding yarn. Removing node.

--- a/base-rails/6.0.0.rc2/Dockerfile
+++ b/base-rails/6.0.0.rc2/Dockerfile
@@ -7,10 +7,19 @@ FROM steveforse/base-ruby:2.6.3
 user root
 
 # Install nodejs
-RUN curl -sL https://deb.nodesource.com/setup_10.x | bash -
+RUN curl -sS https://dl.yarnpkg.com/debian/pubkey.gpg | apt-key add -
+RUN echo "deb https://dl.yarnpkg.com/debian/ stable main" | tee /etc/apt/sources.list.d/yarn.list
 
 # System dependencies
-RUN apt-get update && apt-get install -y nodejs libsqlite3-dev postgresql postgresql-contrib libpq-dev && apt-get clean
+RUN apt-get update && \
+    apt-get install -y \
+                    yarn \
+                    libsqlite3-dev \
+                    postgresql \
+                    postgresql-contrib \
+                    libpq-dev \
+                    && \
+    apt-get clean
 
 #################
 # INSTALL RAILS #
