Adding sudo and nginx to images

--- a/base-debian/10.0/Dockerfile
+++ b/base-debian/10.0/Dockerfile
@@ -7,7 +7,9 @@ FROM debian:10.0
 user root
 
 # System dependencies
-RUN apt-get update &&       \
-    apt-get install -y  vim
+RUN apt-get update &&   \
+    apt-get install -y  \
+                    vim \
+                    sudo
 RUN apt-get clean
 
